--- a/style.css
+++ b/style.css
@@ -182,8 +182,8 @@ html {
     left: 50%;
     width: 400px;
     padding: 40px;
-    margin-right: 5%;
-    margin-left: 5%;
+    margin-right: 10px;
+    margin-left: 10px;
     transform: translate(-50%, -50%);
     background: rgba(0,0,0,.5);
     box-sizing: border-box;
